--- a/src/app/byengri/byengri/byengri.component.html
+++ b/src/app/byengri/byengri/byengri.component.html
@@ -14,10 +14,16 @@
       <div id="menu">
           <table border="0" cellspacing="0" cellpadding="0">
               <tr>
-                <td class="menu01">
+                 <td class="menu01">
                     <a routerLink="/pathology" class="active nav-link" routerLinkActive="active"><span
                       class="nav-text"></span></a>
-                  </td>                 
+                  </td> 
+                  <td class="menu04">
+                    <a routerLink="/pathology/managestatistics"></a>
+                  </td> 
+                  <td class="menu06">
+                    <a routerLink="/pathology/manageusers"></a>
+                  </td>                                                   
                   <!-- <td><img [src]="'assets/images/menu_010.png'" name="menu_010"  border="0" id="menu_010" /></td>
                   <td><img [src]="'assets/images/menu_020.png'" name="menu_020"  border="0" id="menu_020" /></td> -->
                   <!-- <td><img [src]="'assets/images/menu_030.png'" name="menu_030"  border="0" id="menu_030" /></td>
