add  routing for management

--- a/src/app/byengri/byengri/report/report.component.html
+++ b/src/app/byengri/byengri/report/report.component.html
@@ -137,14 +137,14 @@
                      <table width="100%" cellpadding="0" cellspacing="0" class="table_result pd_l35"> 
                        <thead >
                            <tr>
-                               <th class="table_result_line"  style="width: 10%;">Gene</th>
-                               <th  style="width: 25%;">Amino acid change</th>
-                               <th  style="width: 30%;">Nucleotide change</th>
-                               <th  style="width: 15%;">Variant allele frequency</th>
-                               <th  style="width: 10%;">ID</th>
-                               <th  style="width: 5%;">Tier</th>
-                               <th  style="width: 5%;">
-                                <button class="btn btn-success" (click)="addMutation()">추가</button>
+                               <th class="table_result_line"  style="width:130px;">Gene</th>
+                               <th>Amino acid change</th>
+                               <th>Nucleotide change</th>
+                               <th>Variant allele frequency</th>
+                               <th>ID</th>
+                               <th style="width:130px;">Tier</th>
+                               <th style="width:130px;">
+                                <button class="btn btn_01" (click)="addMutation()">추가</button>
                                </th>
                            </tr>
                        </thead>
@@ -225,12 +225,12 @@
                   <table width="100%" cellpadding="0" cellspacing="0" class="table_result pd_l35" >
                       <thead >
                           <tr>
-                              <th class="table_result_line">Gene</th>
+                              <th class="table_result_line"  style="width:130px;">Gene</th>
                               <th>Region </th>
                               <th>Estimated copy number </th>
-                              <th>Tier</th>
-                              <th>
-                                <button class="btn btn-success" (click)="addAmplifications()">추가</button>
+                              <th  style="width:130px;">Tier</th>
+                              <th  style="width:130px;">
+                                <button class="btn btn_01" (click)="addAmplifications()">추가</button>
                               </th>
                           </tr>
                       </thead>
@@ -303,12 +303,12 @@
                   <table width="100%" cellpadding="0" cellspacing="0" class="table_result pd_l35">
                       <thead >
                           <tr>
-                            <th class="table_result_line" style="width: 15%;">Gene (exon)</th>
-                            <th style="width: 30%;">Breakpoint </th>
-                            <th style="width: 30%;">Function</th>
-                            <th style="width: 15%;">Tier</th>
-                            <th style="width: 10%;">
-                                <button class="btn btn-success" (click)="addFusion()">추가</button>
+                            <th class="table_result_line"  style="width:130px;">Gene (exon)</th>
+                            <th>Breakpoint </th>
+                            <th>Function</th>
+                            <th  style="width:130px;">Tier</th>
+                            <th  style="width:130px;">
+                                <button class="btn btn_01" (click)="addFusion()">추가</button>
                               </th>
                           </tr>
                       </thead>
@@ -394,16 +394,16 @@
               <div  *ngIf="imutation.length">
                   <form [formGroup]="imutationForm">
                       <table width="100%" cellpadding="0" cellspacing="0" class="table_result pd_l35">
-                          <thead >
+                          <thead>
                               <tr>
-                                  <th class="table_result_line" style="width:10%">Gene</th>
-                                  <th style="width:20%">Amino acid change</th>
-                                  <th style="width:30%">Nucleotide change</th>
-                                  <th style="width:15%">Variant allele frequency</th>
-                                  <th style="width:10%">ID</th>
-                                  <th style="width:10%">Note</th>
-                                  <th style="width:5%">
-                                    <button class="btn btn-success" (click)="addIMutation()">추가</button>
+                                  <th class="table_result_line"  style="width:130px;">Gene</th>
+                                  <th>Amino acid change</th>
+                                  <th>Nucleotide change</th>
+                                  <th>Variant allele frequency</th>
+                                  <th style="width: 130px;">ID</th>
+                                  <th  style="width:130px;">Note</th>
+                                  <th  style="width:130px;">
+                                    <button class="btn btn_01" (click)="addIMutation()">추가</button>
                                   </th>
                               </tr>
                           </thead>
@@ -415,11 +415,11 @@
                                   </td>
                                   <td class="txt_c">
                                       <!-- <input type="text" size="15"  class="clr-input" formControlName="aminoAcidChange"> -->
-                                      <textarea class="textarea_01"  style="width: 100%; height: 100%; border: none" formControlName="aminoAcidChange"></textarea>
+                                      <textarea class="textarea_01"  style="width: 90%; height: 100%; border: none" formControlName="aminoAcidChange"></textarea>
                                   </td>
                                   <td class="txt_c">
                                       <!-- <input type="text" size="25"  class="clr-input" formControlName="nucleotideChange"> -->
-                                      <textarea class="textarea_01" style="width: 100%; height: 100%; border: none" formControlName="nucleotideChange"></textarea>
+                                      <textarea class="textarea_01" style="width: 90%; height: 100%; border: none" formControlName="nucleotideChange"></textarea>
                                   </td>
                                   <td class="txt_c">
                                       <input type="text" size="5"  class="clr-input" formControlName="variantAlleleFrequency">    
@@ -485,17 +485,17 @@
               </ng-template>
               -->
               <!-- ------------------------------    -->
-              <div *ngIf="iamplifications.length">
+              <div  class="sub_title_04" *ngIf="iamplifications.length">
                   <form  [formGroup]="iamplificationsForm">
                  <table width="100%" cellpadding="0" cellspacing="0" class="table_result pd_l35 mg_b10" >
                      <thead>
                          <tr>
-                            <th class="table_result_line" style="width: 10%;">Gene</th>
-                            <th style="width: 40%;">Region </th>
-                            <th style="width: 30%;">Estimated copy number </th>
-                            <th style="width: 10%;">Note </th>
-                            <th style="width: 10%;">
-                                <button class="btn btn-success" (click)="addIAmplifications()">추가</button>
+                            <th class="table_result_line" style="width:130px;">Gene</th>
+                            <th>Region </th>
+                            <th>Estimated copy number </th>
+                            <th  style="width:130px;">Note </th>
+                            <th  style="width:130px;">
+                                <button class="btn btn_01" (click)="addIAmplifications()">추가</button>
                              </th>
                          </tr>
                      </thead>
@@ -568,17 +568,17 @@
               </ng-template>
               -->
             <!--  -------------------------------   -->
-              <div *ngIf="ifusion.length">
+              <div  class="sub_title_04" *ngIf="ifusion.length">
                 <form [formGroup]="ifusionForm">
                   <table width="100%" cellpadding="0" cellspacing="0" class="table_result pd_l35" >
                    <thead >
                        <tr>
-                           <th class="table_result_line" style="width: 15%;">Gene (exon)</th>
-                           <th style="width: 30%;">Breakpoint </th>
-                           <th style="width: 30%;">Function</th>
-                           <th style="width: 15%;">Note</th>
-                           <th style="width: 10%;">
-                            <button class="btn btn-success" (click)="addIFusion()">추가</button>
+                           <th class="table_result_line"  style="width:130px;">Gene (exon)</th>
+                           <th>Breakpoint</th>
+                           <th>Function</th>
+                           <th  style="width:130px;">Note</th>
+                           <th style="width:130px;">
+                            <button class="btn btn_01" (click)="addIFusion()">추가</button>
                            </th>
                        </tr>
                    </thead>
@@ -623,7 +623,7 @@
               </div>
               <div class="sub_title_04">[NOTE]</div>
               <div class="font_14 pd_l35 pd_b10">
-                <textarea  class="textarea_01" rows="5" cols="200" [(ngModel)]="notement" style="width:99%;">
+                <textarea  class="textarea_01" rows="6" cols="200" [(ngModel)]="notement" style="width:99%;">
                 </textarea>               
                 </div>
               <hr class="mg_t30"/>
@@ -636,7 +636,7 @@
                       
                 
               <div  class="list_01 textareabox">
-                <textarea  class="textarea_01" rows="20" cols="200" #report  [(ngModel)]="generalReport" style="margin-left: 42px; width:97%;">
+                <textarea  class="textarea_01" rows="20" cols="200" #report  [(ngModel)]="generalReport" style="margin-left: 42px; width:96%;">
                 </textarea>
               </div>
               <hr class="mg_t30"/>
