--- a/src/app/byengri/byengri/report/report.component.scss
+++ b/src/app/byengri/byengri/report/report.component.scss
@@ -259,3 +259,11 @@ img:hover {
 .txt_c {
   padding: 0px !important;
 }
+
+.sub_title_040 {
+  font-size: 14px;
+  color: #1d1d1d;
+  font-family: tahoma, '맑은고딕';
+  font-weight: bold;
+  padding: 5px 0 5px 10px;
+}
