--- a/src/app/byengri/upload/upload.component.html
+++ b/src/app/byengri/upload/upload.component.html
@@ -13,7 +13,7 @@
                 <input type="file" name="userfiles" #uploadfile
                 (change)="onSelectedFile($event)" multiple />
                 <div style="margin-top: 70px; margin-left: 10px;">
-                  <h1 style="font-size: 1rem; font-weight: bold;">업로드할 파일(IR, OR, none-filtered)  3개 tsv 파일을 한개씩 차례로 올려주세요.</h1>
+                  <h1 style="font-size: 1rem; font-weight: bold;">업로드할 파일(IR, OR, none-filtered)  3개 tsv 파일을 한개씩(순서는 상관없음) 차례로 올려주세요.</h1>
                 </div>
                               
               </div>
