--- a/src/app/home/components/manage-users/manage-users.component.html
+++ b/src/app/home/components/manage-users/manage-users.component.html
@@ -1,1 +1,79 @@
-<p>manage-users works!</p>
+<div id="container">
+    <div id="content">
+        <table width="100%" border="0" cellspacing="0" cellpadding="0" class="mg_b10">
+            <tr>
+                <td  class="mail_title">User Management</td>
+                <td class="main_btn"> </td>
+            </tr>
+        </table>
+        <div class="box mg_b20 pd_20">
+
+            <input type="date" [value]="startToday()" class="input_01" #start  style="width:180px;"/> ~ 
+            <input type="date" [value]="endToday()" class="input_01"   #end   style="width:180px;"/> &nbsp;&nbsp;&nbsp;  
+            <input type="text" placeholder="사용자ID" class="input_01" #userId />&nbsp;&nbsp;
+            <input type="text" placeholder="사용자명" class="input_01" #userNm />&nbsp;&nbsp;
+            <button type="button" class="btn btn_02" (click)="search(start.value, end.value, userId.value, userNm.value)" >SEARCH</button>
+        </div>
+        <div class="box">
+            <table border="0" cellpadding="0" cellspacing="0" class="table_list">
+                <colgroup>
+                <col style="width:5%;" />
+                <col style="width:10%;" /> 
+                <col style="width:10%;" />
+                <col style="width:10%;" />
+                <col style="width:10%;" />
+                <col style="width:20%;" />
+                <col style="width:15%;" />
+                <col style="width:*" />
+                </colgroup>
+                <thead>
+                    <tr>
+                        <th>No</th>
+                        <th>ID</th>
+                      <!--  <th>암호</th> -->
+                        <th>진검/병리</th>
+                        <th>사용자구분</th>
+                        <th>사용자명</th>
+                        <th>등록일자</th>
+                        <th>최근 로그인일자</th>
+                        <th>승인여부</th>
+                    </tr>
+                </thead>
+                <tbody> 
+                    <tr class="table_bg" *ngFor="let list of lists; let i = index">    
+                        <td ><span class="txt_c" >{{ (curPage-1)*10 + i + 1}}</span></td> 
+                        <td ><span class="txt_c" >{{list.user_id}}</span></td> 
+                        <td ><span class="txt_c" >{{list.dept_nm}}</span></td> 
+                        <td ><span class="txt_c" >{{list.user_gb_nm}}</span></td>
+                        <td ><span class="txt_c" >{{list.user_nm}}</span></td>
+                        <td ><span class="txt_c" >{{list.reg_date}}</span></td>
+                        <td ><span class="txt_c" >{{list.login_date}}</span></td>  
+                        <td ><span class="text_right" *ngIf="list.user_id ==''" >
+                            <input type="radio"  [checked]='true'   name="pick{{list.id}}" id="confirm{{list.id}}">&nbsp;&nbsp;승인
+                            &nbsp;&nbsp;&nbsp;&nbsp;<input type="radio" id="confirm{{list.id}}" name="pick{{list.id}}">&nbsp;&nbsp;미승인
+                            </span>
+                            <span class="text_right" *ngIf="list.user_id !=''" >
+                                <input type="radio"   name="pick{{list.id}}" id="confirm{{list.id}}">&nbsp;&nbsp;승인
+                                &nbsp;&nbsp;&nbsp;&nbsp;<input type="radio" [checked]='true' id="confirm{{list.id}}" name="pick{{list.id}}">&nbsp;&nbsp;미승인
+                             </span>
+                        </td> 
+                    </tr>  
+                </tbody>
+            </table>
+        </div>
+        <div class="txt_c pd_t20 btn_num">
+            <a class="ico_pre" (click)="goPage('<')" >이전</a>   
+            <span *ngFor="let i of [1,2,3,4,5,6,7,8,9,10]">  
+                <span   *ngIf="i + (pageLine*10) <= totPage">   
+                    <span *ngIf="i + (pageLine*10) == curPage">
+                        <a  (click)="goPage(i + (pageLine*10))"><span class="btn_select">{{i + (pageLine*10)}}</span></a>
+                    </span>
+                    <span *ngIf="i + (pageLine*10) != curPage">
+                        <a  (click)="goPage(i + (pageLine*10))"><span>{{i + (pageLine*10)}}</span></a>
+                    </span> 
+                </span>    
+            </span> 
+            <a class="ico_next" (click)="goPage('>')" >다음</a> 
+        </div>  
+    </div>
+</div>
