--- a/src/app/byengri/byengri/report/report.component.scss
+++ b/src/app/byengri/byengri/report/report.component.scss
@@ -267,3 +267,11 @@ img:hover {
   font-weight: bold;
   padding: 5px 0 5px 10px;
 }
+
+.fontsize {
+  font-size: 14px;
+}
+
+.main_title_height_25 {
+  height: 25px;
+}
