--- a/src/app/byengri/byengri/report/report.component.html
+++ b/src/app/byengri/byengri/report/report.component.html
@@ -20,37 +20,37 @@
                   <col style="width:25%;" />
                   </colgroup>
                   <tr>
-                      <th class="table_result_line">환자이름</th>
+                      <th class="table_result_line fontsize">환자이름</th>
                       <td class="txt_c">{{patientInfo.name}}</td>
-                      <th>등록번호</th>
-                      <td class="txt_c">{{patientInfo.patientID}}</td>
+                      <th class="fontsize">등록번호</th>
+                      <td class="txt_c ">{{patientInfo.patientID}}</td>
                   </tr>
                   <tbody>
                       <tr>
-                          <th class="table_result_line">성별/나이
+                          <th class="table_result_line fontsize">성별/나이
                               </th>
                           <td class="txt_c">{{patientInfo.gender}}/{{patientInfo.age}}</td>
-                          <th class="txt_c">분자병리번호</th>
+                          <th class="txt_c fontsize">분자병리번호</th>
                           <td class="txt_c">{{patientInfo.pathology_num}}</td>
                       </tr>
                   </tbody>
               </table>
-              <div class="main_title mg_t20 mg_b10">검체정보</div>
+              <div class="main_title mg_t20 mg_b10 main_title_height_25">검체정보</div>
               <table width="100%" border="0" cellpadding="0" cellspacing="0" class="table_result">
                   <thead>
                       <tr>
-                          <th class="table_result_line">DNA and RNA extraction</th>
-                          <th>관련병리번호</th>
-                          <th>Key block</th>
-                          <th>Tumor cell percentage</th>
-                          <th>Organ</th>
-                          <th>Tumor type</th>
-                          <th>Pathological diagnosis</th>
+                          <th class="table_result_line fontsize">DNA and RNA extraction</th>
+                          <th class="fontsize">관련병리번호</th>
+                          <th class="fontsize">Key block</th>
+                          <th class="fontsize">Tumor cell percentage</th>
+                          <th class="fontsize">Organ</th>
+                          <th class="fontsize">Tumor type</th>
+                          <th class="fontsize">Pathological diagnosis</th>
                       </tr>
                   </thead>
                   <tbody>
                       <tr>
-                        <td class="table_result_line txt_c">
+                        <td class="table_result_line txt_c" style="height: 40px;">
                             <input type="text" size="10" #dnarnaext class="clr-input" [value]="extraction.dnarna" (change)="setDNAandRNAextraction(dnarnaext.value)">
                         </td>
                           <td class="txt_c">
@@ -77,7 +77,7 @@
                       </tr>
                   </tbody>
               </table>
-              <div class="main_title  mg_t20">검사결과</div>
+              <div class="main_title  mg_t20 main_title_height_25">검사결과</div>
               <div class="sub_title_03_E">Clinically significant biomarkers</div>
               <div class="pd_r20">
                   <div class="sub_title_04"> (1) Mutation: <span *ngIf="!mutation.length" class="sub_title_04">None</span>                     
@@ -137,13 +137,13 @@
                      <table width="100%" cellpadding="0" cellspacing="0" class="table_result pd_l35"> 
                        <thead >
                            <tr>
-                               <th class="table_result_line"  style="width:130px;">Gene</th>
-                               <th>Amino acid change</th>
-                               <th>Nucleotide change</th>
-                               <th>Variant allele frequency</th>
-                               <th>ID</th>
-                               <th style="width:130px;">Tier</th>
-                               <th style="width:130px;">
+                               <th class="table_result_line fontsize"  style="width:130px;">Gene</th>
+                               <th class="fontsize">Amino acid change</th>
+                               <th class="fontsize">Nucleotide change</th>
+                               <th class="fontsize" style="width:10%">Variant allele frequency</th>
+                               <th class="fontsize">ID</th>
+                               <th style="width:130px;font-size: 14px;">Tier</th>
+                               <th style="width:130px;font-size: 14px;">
                                 <button class="btn btn_01" (click)="addMutation()">추가</button>
                                </th>
                            </tr>
@@ -152,19 +152,19 @@
                         <ng-container formArrayName="mutationLists" *ngFor="let group of mutationLists().controls; let i=index">
                            <tr  [formGroupName]="i">
                                <td class="table_result_line txt_c" >
-                                   <input type="text" size="10"  class="clr-input"  formControlName="gene" style="color: red;">
+                                   <input type="text" size="7"  class="clr-input"  formControlName="gene" style="color: red;">
                                </td>
                                <td class="txt_c">
-                                   <input type="text" size="40"  class="clr-input"  formControlName="aminoAcidChange"  style="color: red;">
+                                   <input type="text" size="55"  class="clr-input"  formControlName="aminoAcidChange"  style="color: red;">
                                </td>
                                <td class="txt_c">
-                                   <input type="text" size="40"  class="clr-input"  formControlName="nucleotideChange">
+                                   <input type="text" size="55"  class="clr-input"  formControlName="nucleotideChange">
                                </td>
                                <td class="txt_c">
                                    <input type="text" size="5"  class="clr-input"  formControlName="variantAlleleFrequency"> 
                                </td>
                                <td class="txt_c">
-                                   <input type="text" size="10"  class="clr-input"  formControlName="ID">
+                                   <input type="text" size="7"  class="clr-input"  formControlName="ID">
                                </td>                           
                                <td class="txt_c">
                                    <input type="text" size="5"  class="clr-input"  formControlName="tier"  style="color: red;">
@@ -225,10 +225,10 @@
                   <table width="100%" cellpadding="0" cellspacing="0" class="table_result pd_l35" >
                       <thead >
                           <tr>
-                              <th class="table_result_line"  style="width:130px;">Gene</th>
-                              <th>Region </th>
-                              <th>Estimated copy number </th>
-                              <th  style="width:130px;">Tier</th>
+                              <th class="table_result_line fontsize"  style="width:130px;">Gene</th>
+                              <th class="fontsize">Region </th>
+                              <th class="fontsize">Estimated copy number </th>
+                              <th  style="width:130px;font-size: 14px;">Tier</th>
                               <th  style="width:130px;">
                                 <button class="btn btn_01" (click)="addAmplifications()">추가</button>
                               </th>
@@ -303,10 +303,10 @@
                   <table width="100%" cellpadding="0" cellspacing="0" class="table_result pd_l35">
                       <thead >
                           <tr>
-                            <th class="table_result_line"  style="width:130px;">Gene (exon)</th>
-                            <th>Breakpoint </th>
-                            <th>Function</th>
-                            <th  style="width:130px;">Tier</th>
+                            <th class="table_result_line fontsize"  style="width:130px;">Gene (exon)</th>
+                            <th class="fontsize">Breakpoint </th>
+                            <th class="fontsize">Function</th>
+                            <th  style="width:130px;font-size: 14px;">Tier</th>
                             <th  style="width:130px;">
                                 <button class="btn btn_01" (click)="addFusion()">추가</button>
                               </th>
@@ -325,7 +325,7 @@
                                 <input type="text" size="20"  class="clr-input" formControlName="functions">
                               </td>
                               <td class="txt_c">
-                                <input type="text" size="5"  class="clr-input" formControlName="tier">
+                                <input type="text" size="5"  class="clr-input" formControlName="tier"  style="color: red;">
                               </td>
                               <td align="center">
                                 <img [src]="'assets/images/cancel.png'"  (click)="removeFusion(i)">
@@ -396,12 +396,12 @@
                       <table width="100%" cellpadding="0" cellspacing="0" class="table_result pd_l35">
                           <thead>
                               <tr>
-                                  <th class="table_result_line"  style="width:130px;">Gene</th>
-                                  <th>Amino acid change</th>
-                                  <th>Nucleotide change</th>
-                                  <th>Variant allele frequency</th>
-                                  <th style="width: 130px;">ID</th>
-                                  <th  style="width:130px;">Note</th>
+                                  <th class="table_result_line fontsize"  style="width:130px;">Gene</th>
+                                  <th class="fontsize">Amino acid change</th>
+                                  <th class="fontsize">Nucleotide change</th>
+                                  <th class="fontsize" style="width: 10%">Variant allele frequency</th>
+                                  <th style="width: 130px;font-size: 14x;">ID</th>
+                                  <th  style="width:130px;font-size: 14px">Note</th>
                                   <th  style="width:130px;">
                                     <button class="btn btn_01" (click)="addIMutation()">추가</button>
                                   </th>
@@ -411,21 +411,21 @@
                              <ng-container   formArrayName="imutationLists" *ngFor="let group of imutationLists().controls; let i=index"> 
                               <tr [formGroupName]="i">
                                   <td class="table_result_line txt_c">
-                                      <input type="text" size="10"  class="clr-input" formControlName="gene">
+                                      <input type="text" size="7"  class="clr-input" formControlName="gene">
                                   </td>
                                   <td class="txt_c">
-                                      <!-- <input type="text" size="15"  class="clr-input" formControlName="aminoAcidChange"> -->
-                                      <textarea class="textarea_01"  style="width: 90%; height: 100%; border: none" formControlName="aminoAcidChange"></textarea>
+                                      <input type="text" size="55"  class="clr-input" formControlName="aminoAcidChange">
+                                      <!-- <textarea class="textarea_01"  style="width: 100%; height: 100%; border: none" formControlName="aminoAcidChange"></textarea> -->
                                   </td>
                                   <td class="txt_c">
-                                      <!-- <input type="text" size="25"  class="clr-input" formControlName="nucleotideChange"> -->
-                                      <textarea class="textarea_01" style="width: 90%; height: 100%; border: none" formControlName="nucleotideChange"></textarea>
+                                      <input type="text" size="55"  class="clr-input" formControlName="nucleotideChange">
+                                      <!-- <textarea class="textarea_01" style="width: 100%; height: 100%; border: none" formControlName="nucleotideChange"></textarea> -->
                                   </td>
                                   <td class="txt_c">
                                       <input type="text" size="5"  class="clr-input" formControlName="variantAlleleFrequency">    
                                   </td>
                                   <td class="txt_c">
-                                      <input type="text" size="10"  class="clr-input" formControlName="ID">
+                                      <input type="text" size="7"  class="clr-input" formControlName="ID">
                                   </td>                           
                                   <td class="txt_c">
                                       <input type="text" size="5"  class="clr-input" formControlName="tier">
@@ -490,10 +490,10 @@
                  <table width="100%" cellpadding="0" cellspacing="0" class="table_result pd_l35 mg_b10" >
                      <thead>
                          <tr>
-                            <th class="table_result_line" style="width:130px;">Gene</th>
-                            <th>Region </th>
-                            <th>Estimated copy number </th>
-                            <th  style="width:130px;">Note </th>
+                            <th class="table_result_line fontsize" style="width:130px;">Gene</th>
+                            <th class="fontsize">Region </th>
+                            <th class="fontsize">Estimated copy number </th>
+                            <th  style="width:130px;font-size: 14px;">Note </th>
                             <th  style="width:130px;">
                                 <button class="btn btn_01" (click)="addIAmplifications()">추가</button>
                              </th>
@@ -573,10 +573,10 @@
                   <table width="100%" cellpadding="0" cellspacing="0" class="table_result pd_l35" >
                    <thead >
                        <tr>
-                           <th class="table_result_line"  style="width:130px;">Gene (exon)</th>
-                           <th>Breakpoint</th>
-                           <th>Function</th>
-                           <th  style="width:130px;">Note</th>
+                           <th class="table_result_line fontsize"  style="width:130px;">Gene (exon)</th>
+                           <th class="fontsize">Breakpoint</th>
+                           <th class="fontsize">Function</th>
+                           <th  style="width:130px;font-size: 14px;">Note</th>
                            <th style="width:130px;">
                             <button class="btn btn_01" (click)="addIFusion()">추가</button>
                            </th>
@@ -623,7 +623,7 @@
               </div>
               <div class="sub_title_04">[NOTE]</div>
               <div class="font_14 pd_l35 pd_b10">
-                <textarea  class="textarea_01" rows="6" cols="200" [(ngModel)]="notement" style="width:99%;">
+                <textarea  class="textarea_01" rows="8" cols="200" [(ngModel)]="notement" style="width:99%;">
                 </textarea>               
                 </div>
               <hr class="mg_t30"/>
@@ -1343,6 +1343,7 @@
 <!--  ---------------      -->
 <div class="foot_btn mg_t30 pd_b30 txt_c main_btn">
     <ul>
+        <!--  
         <li>
             <button type="button" class="btn btn-success"  
              >수정</button>
@@ -1350,7 +1351,8 @@
         <li>
             <button type="button" class="btn btn-success"  
              >임시저장</button>
-        </li>                
+        </li> 
+    -->               
         <li>
             <button type="button" class="btn btn-success"  [disabled]="getStatus(1)"
             (click)="savePathologyData()">1차저장</button>
