--- a/src/app/forms/form2/form2.component.scss
+++ b/src/app/forms/form2/form2.component.scss
@@ -56,7 +56,7 @@
  }
 
  input[type="text"] {
-   width: 100%;
+   width: 80%;
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
@@ -66,6 +66,34 @@
    cursor: pointer;
    vertical-align: middle;
    background-color: lightblue;
+ }
+
+ .modal-overlay {
+   display: inline-block;
+   position: fixed;
+   width: 100%;
+   height: 100%;
+   left: 0;
+   top: 0;
+   background: rgba(51, 51, 51, 0.7);
+   z-index: 10;
+ }
+
+ .modal-body {
+   position: absolute;
+   width: 90vw;
+   max-width: 90vw;
+   max-height: 95vh;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   z-index: 20;
+   border: 1px solid black;
+   box-shadow: 0 1px 16px 0 rgba(0, 0, 0, 0.2), 0 2px 8px 0 rgba(0, 0, 0, 0.14), 0 4px 8px -1px rgba(0, 0, 0, 0.12);
+ }
+
+ .textcenter {
+   text-align: center;
  }
 
 
