--- a/src/app/forms/preview/preview.component.scss
+++ b/src/app/forms/preview/preview.component.scss
@@ -1,10 +1,11 @@
+/*
 :host {
   position: absolute;
   top: -140px;
   left: 0px;
   z-index: 100;
 }
-
+*/
 td,
 th {
   padding-top: 0 !important;
@@ -15,13 +16,14 @@ th {
   padding: 0 !important;
 }
 
+/*
 .background {
   background: black;
-  // opacity: 0.5;
+  opacity: 0.5;
   width: 100vw;
   height: 200vh;
 }
-
+*/
 .container {
   z-index: 101;
 }
