--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -25,7 +25,7 @@
                             style="color: #fff;  background-color: #325974;  font-size:18px; font-weight:bold;  padding:40px 17px; border: 1px solid transparent; box-shadow:0 3px 1px -2px rgba(0, 0, 0, .02), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12); cursor: pointer;">로그인</button>
                         </td>
                         <td rowspan="2"> 
-                            <button type="button"  tabindex="6" style="color: #fff;  background-color: #808080;  font-size:18px; font-weight:bold;  padding:40px 17px; border: 1px solid transparent; box-shadow:0 3px 1px -2px rgba(0, 0, 0, .02), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12); cursor: pointer;">사용자등록</button>
+                            <button type="button"  tabindex="6" style="color: #fff;  background-color: #808080;  font-size:18px; font-weight:bold;  padding:40px 17px; border: 1px solid transparent; box-shadow:0 3px 1px -2px rgba(0, 0, 0, .02), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12); cursor: pointer;" (click)="register()">사용자등록</button>
                         </td>
                     </tr>
                     <tr>
