--- a/src/app/forms/preview/preview.component.html
+++ b/src/app/forms/preview/preview.component.html
@@ -57,6 +57,7 @@
                           <thead>
                               <tr>
                                   <th class="table_result_line">Gene</th>
+                                  <th>Type</th>
                                   <th>Functional Impact</th>
                                   <th>Transcript</th>
                                   <th>Exon/Intron</th>
@@ -72,16 +73,18 @@
                           <tbody>
                               <ng-container   *ngFor="let dt of dts">
                               <tr>
+                                  
                                   <td class="table_result_line txt_c">{{dt.gene}}</td>
-                                  <td class="txt_c">{{dt.functionalImpact}}</td>
+                                  <td class="txt_c">{{dt.type}}</td>
+                                  <td class="txt_c">{{dt.functional_impact}}</td>
                                   <td class="txt_c">{{dt.transcript}}</td>
-                                  <td class="txt_c">{{dt.exonIntro}}</td>
-                                  <td class="txt_c">{{dt.nucleotideChange}}</td>
-                                  <td class="txt_c">{{dt.aminoAcidChange}}</td>
+                                  <td class="txt_c">{{dt.exon}}</td>
+                                  <td class="txt_c">{{dt.nucleotide_change}}</td>
+                                  <td class="txt_c">{{dt.amino_acid_change}}</td>
                                   <td class="txt_c">{{dt.zygosity}}</td>
-                                  <td class="txt_c">{{dt.vafPercent}}</td>
+                                  <td class="txt_c">{{dt.vaf}}</td>
                                   <td class="txt_c">{{dt.references}}</td>
-                                  <td class="txt_c">{{dt.cosmicID}}</td>
+                                  <td class="txt_c">{{dt.cosmic_id}}</td>
                               </tr>
                               <!-- <tr>
                                   <td colspan="11" class="table_result_line">
@@ -121,7 +124,7 @@
                                     <ng-container  *ngFor="let comment of comments;">
                                         <tr>
                                             <td class="table_result_line">{{comment.gene}}</td>
-                                            <td>{{comment.variants}}</td>
+                                            <td>{{comment.variant_id}}</td>
                                             <td class="textarea01">
                                                 <textarea style="width:96%"class="textarea_01">{{comment.comment}}</textarea>
                                             </td>
